--- a/style.css
+++ b/style.css
@@ -70,3 +70,9 @@ h2 {
   font-size: 25px;
   text-shadow: 1px 1px 2px black;
 }
+.joaodev-logo {
+  width: 80px;
+  position: absolute;
+  top: -10px;
+  left: 10px;
+}
